// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreedCard should match the correct snapshot 1`] = `
<div
  className="BreedCard-container activeCard"
  name="Siberian Husky"
  onClick={[Function]}
>
  <div
    className="breed-card-header"
  >
    Siberian Husky
  </div>
  <div
    className="img-container"
  >
    <img
      alt="dog"
      className="breed-img"
      src="siberian-husky.jpg"
    />
  </div>
  <div
    className="breed-attr"
  >
    <WithStyles(Tooltip)
      title="Requires cold weather"
    >
      <i
        className="fas fa-snowflake"
        data-for="pref"
        data-tip="Requires cold climate"
      />
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      title="Loves hiking"
    >
      <i
        className="fas fa-mountain"
        data-for="pref"
        data-tip="Loves hiking"
      />
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      title="Loves running"
    >
      <i
        className="fas fa-running"
        data-for="pref"
        data-tip="Loves running"
      />
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`BreedCard should match the correct snapshot 2`] = `
<div
  className="BreedCard-container activeCard"
  name="Siberian Husky"
  onClick={[Function]}
>
  <div
    className="breed-card-header"
  >
    Siberian Husky
  </div>
  <div
    className="img-container"
  >
    <img
      alt="dog"
      className="breed-img"
      src="siberian-husky.jpg"
    />
  </div>
  <div
    className="breed-attr"
  >
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`BreedCard should match the correct snapshot 3`] = `
<div
  className="BreedCard-container activeCard"
  name="Siberian Husky"
  onClick={[Function]}
>
  <div
    className="breed-card-header"
  >
    Siberian Husky
  </div>
  <div
    className="img-container"
  >
    <img
      alt="dog"
      className="breed-img"
      src="siberian-husky.jpg"
    />
  </div>
  <div
    className="breed-attr"
  >
    <WithStyles(Tooltip)
      title="Requires cold weather"
    >
      <i
        className="fas fa-snowflake"
        data-for="pref"
        data-tip="Requires cold climate"
      />
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      title="Loves hiking"
    >
      <i
        className="fas fa-mountain"
        data-for="pref"
        data-tip="Loves hiking"
      />
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      title="Loves running"
    >
      <i
        className="fas fa-running"
        data-for="pref"
        data-tip="Loves running"
      />
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`BreedCard should match the correct snapshot 4`] = `
<div
  className="BreedCard-container "
  name="Siberian Husky"
  onClick={[Function]}
>
  <div
    className="breed-card-header"
  >
    Siberian Husky
  </div>
  <div
    className="img-container"
  >
    <img
      alt="dog"
      className="breed-img"
      src="siberian-husky.jpg"
    />
  </div>
  <div
    className="breed-attr"
  >
    <WithStyles(Tooltip)
      title="Requires cold weather"
    >
      <i
        className="fas fa-snowflake"
        data-for="pref"
        data-tip="Requires cold climate"
      />
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      title="Loves hiking"
    >
      <i
        className="fas fa-mountain"
        data-for="pref"
        data-tip="Loves hiking"
      />
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      title="Loves running"
    >
      <i
        className="fas fa-running"
        data-for="pref"
        data-tip="Loves running"
      />
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`BreedCard should match the correct snapshot when the path is not "/about-breeds"  1`] = `
<div
  className="BreedCard-container activeCard"
  name="Siberian Husky"
  onClick={[Function]}
>
  <div
    className="breed-card-header"
  >
    Siberian Husky
  </div>
  <div
    className="img-container"
  >
    <img
      alt="dog"
      className="breed-img"
      src="siberian-husky.jpg"
    />
  </div>
  <div
    className="breed-attr"
  >
    <WithStyles(Tooltip)
      title="Requires cold weather"
    >
      <i
        className="fas fa-snowflake"
        data-for="pref"
        data-tip="Requires cold climate"
      />
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      title="Loves hiking"
    >
      <i
        className="fas fa-mountain"
        data-for="pref"
        data-tip="Loves hiking"
      />
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      title="Loves running"
    >
      <i
        className="fas fa-running"
        data-for="pref"
        data-tip="Loves running"
      />
    </WithStyles(Tooltip)>
  </div>
</div>
`;
